1 introducce expandable icons to experience list 2 add collapse ability to experience list 3 move id #menu to the bottom to fix target on wider screens

--- a/src/_component/experience/experience.scss
+++ b/src/_component/experience/experience.scss
@@ -93,6 +93,12 @@ $class: 'experience';
   }
 }
 
+.#{$class}-list-close {
+  // hide the label that can close the header
+  // of the experience list unless it's expended
+  display: none;
+  float: right;
+}
 
 // we're using the adjacent selector "+" to apply css properties
 // to the next sibling element based on the checked state of the
@@ -113,6 +119,12 @@ $class: 'experience';
   // change the background color of the selected header experience
   background-color: $color-gumbo;
   border-bottom: none;
+  .#{$class}-list-close {
+    display: inherit;
+  }
+  & > .resume-icon.plus {
+    display: none;
+  }
   .resume-icon-plus {
     transform: rotate(45deg);
   }
